--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,7 +1,7 @@
 //Variables like colour
 
 $firefly: #0C1B23;
-$bunker: #141D1D;
+$bunker: #109B9B;
 $grayNurse: #E9EAE9;
 $pewter: #9da09f;
 $white: #fff;
