--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -34,8 +34,8 @@ body {
 
 .info-card {
     height: 70rem;
-    margin: 0 auto;
-    position: absolute;
+    margin: 0;
+    display: block;
     background-color: #fff;
     box-shadow: 0.01rem 0.01rem 1rem $firefly;
     @include vertical-align();
@@ -44,19 +44,21 @@ body {
 .info-card__content {
     float: center;
     height: 100%;
-    position: absolute;
+    position: relative;
     overflow: hidden;
 }
 
 .info-card__image-exposure {
-    width: 90%;
+    width: 100%;
 }
 
 .info-card__bio {
+	bottom: 55rem;
+	left: 22rem;
+	text-align: center;
     width: 100%;
-    padding: 5rem;
     height: auto;
-    font-family: 'Domine', serif;
+    font-family: 'Geostar', serif;
 
     &--title {
         color: $bunker;
@@ -73,12 +75,13 @@ body {
 .info-card__image-exposure__item {
     background-image: url(../images/eyes.png);
     background-color: $white;
-    background-position: 80% 50%;
+    background-position: 100% 50%;
     background-repeat: no-repeat;
     height: 100%;
-    width: 100%;
-    display: inline-block;
-    position: absolute;
+    width: 83%;
+
+    display: block;
+    position: relative;
     opacity: 0.9;
 }
 
